...
  {
    id: '2',
    idv2: '3',
    network: {
      chainId: '1',
      active: true,
      chainName: 'Ethereum',
      shortName: 'ETH',
    },
    symbol: 'ETH',
    logo: 'some_random_logo_url',
    decimals: 8,
    address: '0xabc',
    name: 'Ethereum',
...
